--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0172F8A6434BBD3C86F6EEBA9E588285
-ProjectName=Third Person BP Game Template
+ProjectName=Rozgotowani
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
